# Universal-Transformer-Compression

./: README.md  pyproject.toml  run.sh  run_experiments.py
results/: benchmark_log_20260324_200114.txt  benchmark_log_20260324_202704.txt  compressor_benchmark_0324_1445.csv  compressor_benchmark_0324_2024.csv  compressor_benchmark_0324_2049.csv
src/: data_loader.py  models.py
