[project]
name = "UT-Compressor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pybind11>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "mamba-ssm; sys_platform == 'linux'",
    "causal-conv1d; sys_platform == 'linux'"
]
